...
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: context.colors.background,
      appBar: AppBar(
        leading: const FlixieBackButton(),
        backgroundColor: Colors.transparent,
        title: const Text('Group invitation'),
      ),
      body: _loading
          ? const ContentListSkeleton()
          : _error != null || _group == null
              ? Center(
                  child: Padding(
...
